--- a/style.css
+++ b/style.css
@@ -2,33 +2,127 @@ html,
 body {
   min-height: 100%;
   margin: 0;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Fira Sans", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 * {
   box-sizing: border-box;
 }
 
-header {
+a {
+  color: black;
+}
+
+.navbar {
+  position: fixed;
+  background-color: white;
+  z-index: 100;
+  right: 0;
+  left: 0;
+  /* color: white; */
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 10px;
+}
+
+.navbar-name {
+  font-size: 25px;
+  text-decoration: none;
+}
+
+.navbar-nav {
+  display: flex;
   justify-content: space-around;
-  align-items: center;
-  padding-top: 50px;
-  background-color: ghostwhite;
+  column-gap: 10px;
+}
+
+.nav-item {
+  text-decoration: none;
+}
+
+.cover {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+}
+
+.cover-image {
+  position: absolute;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+}
+
+.image {
+  /* top: 0px;
+  left: 0px; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.center {
+  position: absolute;
+  color: white;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.name {
+  font-size: 80px;
+  bottom: 10px;
+  margin: 0;
+}
+
+.greeting {
+  font-size: 20px;
+}
+
+.arrow {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  z-index: 1;
+  height: 40px;
+  width: 40px;
+  transform: translate(-50%, -50%);
+}
+
+header {
 }
 
 .profile-picture {
   width: 250px;
 }
 
+#about-me {
+  padding-top: 50px;
+  /* width: 100%; */
+}
+
 .intro {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 30px;
+  /* padding-top: 50px; */
+  flex-wrap: wrap-reverse;
+}
+
+.summary {
   max-width: 50ch;
 }
 
-.projects-container {
+#projects-container {
   width: 100%;
   display: grid;
   grid-template-columns: 50px 1fr 2fr 50px;
@@ -38,25 +132,31 @@ header {
     "left-gutter thumbnail2 description2 right-gutter"
     "left-gutter thumbnail3 description3 right-gutter"
     "footer footer footer footer";
-  row-gap: 10px;
+  gap: 10px;
+  justify-items: center;
+}
+
+.section-header {
+  font-size: 40px;
+  text-align: center;
 }
 
 .project-header {
   grid-area: header;
-  display: sticky;
-  padding: 0 20px;
-  border-bottom: 3px solid black;
 }
 
 .project-thumbnail {
   border-radius: 10px;
+  object-fit: cover;
   width: 250px;
+  height: 250px;
 }
 
 .project-description {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  max-width: 55ch;
 }
 
 .thumbnail1 {
@@ -81,4 +181,11 @@ header {
 
 .description3 {
   grid-area: description3;
+}
+
+#contact {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  column-gap: 25px;
 }
